methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:14: error: ':' expected but ')' found.
def faireV(c){
            ^MethodsPicture:43: error: identifier expected but '}' found.
}
^